--- a/css/styles.css
+++ b/css/styles.css
@@ -101,10 +101,17 @@ address {
 
 .mobile-menu-container {
     position: relative;
+    padding-top: 76px;
+    padding-bottom: 40px;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
 }
 
 .mobile-menu-close-button {
     position: absolute;
+    display: flex;
     right: 24px;
     top: 24px;
     background-color: transparent;
@@ -113,7 +120,6 @@ address {
     fill: #2E2F42;
     width: 24px;
     height: 24px;
-    display: flex;
     align-items: center;
     justify-content: center; 
     border: 1px solid rgba(0, 0, 0, 0.1);
@@ -172,7 +178,10 @@ address {
     line-height: 1.2;
     letter-spacing: 0.02em;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
+}
+
+.mobile-menu-contact .current-page {
+    color: #4D5AE5;
 }
 
 .mobile-menu-contact:hover,
@@ -214,6 +223,7 @@ address {
 .mobile-social-list-link:focus {
     background-color: #404bbf;
 }
+    }
 
 /* ============== /MOBILE-MENU STYLES ============== */
 
@@ -374,6 +384,15 @@ screen and (min-device-pixel-ratio: 2) {
 
 /* ============== MOBILE-OUR-TEAM STYLES ============== */
 
+.our-team-list {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 72px;
+}
+
 .our-team {
     background-color: #F4F4FD;
     padding-top: 96px;
@@ -391,14 +410,46 @@ screen and (min-device-pixel-ratio: 2) {
     margin-bottom: 72px;
 }
 
-.our-team-list {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 72px;
+.our-team-list-item {
+    background-color: #FFFFFF;
+    width: 264px;
+    height: 428px;
+    border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
 }
+
+.div-team {
+    padding-top: 32px;
+    padding-bottom: 32px;
+}
+
+.third-heading {
+    text-align: center;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2E2F42;
+    margin-bottom: 8px;
+}
+
+.paragraph-item {
+    text-align: center;
+    font-size: 16px;
+    line-height: 1.5;
+    margin-bottom: 8px;
+}
+
+
+
+
+
+
+
+
+
 
 .our-team-list-item {
     background-color: #FFFFFF;
