--- a/css/styles1.css
+++ b/css/styles1.css
@@ -100,7 +100,7 @@ body {
         background-color: #404BBF;
         margin-left: auto;
         margin-right: auto;
-        margin-bottom: -17px;
+        margin-bottom: -24px;
         bottom: -1px;
         border-radius: 2px;
         position: absolute;
@@ -256,6 +256,7 @@ body {
 }
 
 .our-team-list-item {
+    background-color: #FFFFFF;
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
       0px 1px 1px 0px rgba(46, 47, 66, 0.16),
@@ -264,7 +265,6 @@ body {
 
   .div-team {
     padding: 32px 0;
-    background-color: #ffffff;
   }
 
   .third-heading {
@@ -527,7 +527,7 @@ body {
         text-align: center;
     }
     
-    .footer-paragraph {
+    .footer-first-div {
         margin-bottom: 72px;
     }
     
@@ -535,7 +535,7 @@ body {
         margin-bottom: 16px;
     }
     
-    .footer-social-list {
+    .footer-social-media-list {
         margin-bottom: 72px;
     }
     
@@ -808,6 +808,17 @@ body {
     flex-direction: column;
 }
 
+.mobile-menu-container {
+    position: relative;
+    padding-top: 76px;
+    padding-bottom: 40px;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+
+}
+
 .mobile-menu.is-open {
     opacity: 1;
     visibility: visible;
@@ -924,10 +935,6 @@ body {
     margin-bottom: 40px;
 }
 
-.mobile-menu-navigation {        зробити відступ до кінця сторінки
-    margin-bottom: 168px;
-}
-
 /* ============== TABLET STYLES ============== */
 
 @media screen and (min-width:768px) {
@@ -940,7 +947,7 @@ body {
 }
 
     .container {
-        width: 736;
+        width: 768px;
         margin: 0 auto;
     }
     
@@ -956,8 +963,9 @@ body {
 
     .menu {
         display: flex;
-        justify-content: space-between;
-        column-gap: 12px;
+        align-items: center;
+        margin: 0 auto;
+        gap: 40px;
     }
 
     .menu-list {
@@ -988,6 +996,7 @@ body {
     .menu-link.current-page ::after {
         content: "";
         position: absolute;
+        display: block;
         left: 0;
         bottom: -1px;
         width: 100%;
@@ -1006,6 +1015,10 @@ body {
         justify-content: space-between;
     }
     
+    .menu-item {
+        padding: 24px 0;
+    }
+
     address {
         font-style: normal;
       }
@@ -1159,8 +1172,7 @@ body {
     }
 
     .menu-link {
-        padding-top: 24px;
-        padding-bottom: 24px;
+        padding: 24px 0;
     }
 
     .contact-item {
@@ -1168,8 +1180,24 @@ body {
         padding-bottom: 24px;
     }
 
+    .menu-link.current-page.link::after {
+        content: '';
+        display: block;
+        width: 100%;
+        height: 4px;
+        background-color: #404BBF;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: -17px;
+        bottom: -1px;
+        border-radius: 2px;
+        position: absolute;
+        left: 0;
+    }
+
     .hero {
         padding: 188px 0;
+        max-width: 1440px;
     }
 
     .main-title {
